--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,9 +15,10 @@ build:
 
 requirements:
   build:
-    - python                                 # [build_platform != target_platform]
-    - cross-python_{{ target_platform }}     # [build_platform != target_platform]
     - {{ compiler('c') }}
+    # extras for cross compiling
+    - python                              # [build_platform != target_platform]
+    - cross-python_{{ target_platform }}  # [build_platform != target_platform]
   host:
     - pip
     - python
@@ -26,8 +27,16 @@ requirements:
     - python
 
 test:
-  imports:
-    - pyRXPU
+  requires:
+    - pip
+    - psutil
+  source_files:
+    - test/
+  commands:
+    # check requirements
+    - python -m pip check
+    # run test suite
+    - python test/runAll.py
 
 about:
   home: http://www.reportlab.com
