remove old SOURCES.txt on windows
it breaks the build because it contains absolute paths that don't resolve

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,9 @@ source:
 
 build:
   number: 0
-  script: {{ PYTHON }} -m pip install . -vv
+  script:
+    - if exist "pyRXP.egg-info\SOURCES.txt" del "pyRXP.egg-info\SOURCES.txt"  # [win]
+    - {{ PYTHON }} -m pip install . -vv
 
 requirements:
   build:
