--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,10 +13,11 @@ build:
   error_overdepending: true
   ignore_run_exports:
     - vs2015_runtime  # [win]
-  number: 0
+  number: 1
   script:
     - if exist "pyRXP.egg-info\SOURCES.txt" del "pyRXP.egg-info\SOURCES.txt"  # [win]
     - {{ PYTHON }} -m pip install . -vv
+  skip: true  # [python_impl != 'cpython']
 
 requirements:
   build:
