--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,7 @@ build:
   error_overdepending: true
   ignore_run_exports:
     - ucrt  # [win]
-    - vs2015_runtime  # [win]
+    - vc14_runtime  # [win]
   number: 4
   script:
     - if exist "pyRXP.egg-info\SOURCES.txt" del "pyRXP.egg-info\SOURCES.txt"  # [win]
