--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -52,7 +52,7 @@ test:
 about:
   home: http://www.reportlab.com
   doc_url: https://pyrxp.readthedocs.io/en/latest/usage.html
-  license: ReportLab BSD derived
+  license: BDS-3-Clause
   license_family: BSD
   license_file: LICENSE.txt
   summary: Python RXP interface - fast validating XML parser
